force-app/main/default/objects/Reference_Application__c/fields/Associated_Timeline__c.field-meta.xml
<CustomField>
    <fullName>Associated_Timeline__c</fullName>
    <description>used to display the provided Dates from STL CDA Grants team that will be added as a column to the Ref App Table in flow</description>
    <label>Associated Timeline</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>