force-app/main/default/objects/Reference_Application__c/fields/Budget_Template_1__c.field-meta.xml
<CustomField>
    <fullName>Budget_Template_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Template - Revenue</label>
    <referenceTo>Budget</referenceTo>
    <relationshipLabel>Reference Applications</relationshipLabel>
    <relationshipName>Reference_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>