force-app/main/default/objects/Reference_Application__c/fields/Budget_Template_2__c.field-meta.xml
<CustomField>
    <fullName>Budget_Template_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Template - Expense</label>
    <referenceTo>Budget</referenceTo>
    <relationshipLabel>Reference Applications (Budget Template 2)</relationshipLabel>
    <relationshipName>Reference_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>