force-app/main/default/objects/Reference_Application__c/fields/Budget_Template_Construction__c.field-meta.xml
<CustomField>
    <fullName>Budget_Template_Construction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Template - Construction</label>
    <referenceTo>Budget</referenceTo>
    <relationshipLabel>Reference Applications (Budget Template - Construction)</relationshipLabel>
    <relationshipName>Reference_Applications3</relationshipName>
    <type>Lookup</type>
</CustomField>