force-app/main/default/objects/Reference_Application__c/fields/Budget_Template_Development__c.field-meta.xml
<CustomField>
    <fullName>Budget_Template_Development__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Template - Development</label>
    <referenceTo>Budget</referenceTo>
    <relationshipLabel>Reference Applications (Budget Template - Development)</relationshipLabel>
    <relationshipName>Reference_Applications2</relationshipName>
    <type>Lookup</type>
</CustomField>