force-app/main/default/objects/Reference_Application__c/fields/ContentDocLinkId_del__c.field-meta.xml
<CustomField>
    <fullName>ContentDocLinkId_del__c</fullName>
    <description>API name of the field on the object that has an id of the related record</description>
    <inlineHelpText>API name of the field on the object that has an id of the related record</inlineHelpText>
    <label>ContentDocLinkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>