force-app/main/default/objects/Reference_Application__c/fields/Custom_Object_Creation_JSON__c.field-meta.xml
<CustomField>
    <fullName>Custom_Object_Creation_JSON__c</fullName>
    <inlineHelpText>Use this field to list the objects that will be created and related to the application, upon creation of the application record. Follow this format: {&quot;ObjectApiName__c&quot;:&quot;FieldForRecordId__c&quot;,&quot;ObjectApiName2__c&quot;:&quot;FieldForRecordId__c&quot;,...}</inlineHelpText>
    <label>Custom Object Creation JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>