force-app/main/default/objects/Reference_Application__c/fields/Display_Description__c.field-meta.xml
<CustomField>
    <fullName>Display_Description__c</fullName>
    <inlineHelpText>Displays on Application Under Application Name</inlineHelpText>
    <label>Display Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>