force-app/main/default/objects/Reference_Application__c/fields/Number_of_apps_of_this_type_allowed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_apps_of_this_type_allowed__c</fullName>
    <label>Number of apps of this type allowed?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>